syntax="proto3";

package platform.write_target;
option go_package = "github.com/smartcontractkit/chainlink-framework/capabilities/writetarget/monitoring/pb/platform;writetarget";

import "execution_context.proto";

// WT initiated the processing of the write request
message WriteInitiated {
  string node = 1;
  string forwarder = 2;
  string receiver = 3;

  // Report Info
  uint32 report_id = 4;

  // [Execution Context]
  ExecutionContext execution_context = 20;
}
