syntax="proto3";

package platform.write_target;
option go_package = "github.com/smartcontractkit/chainlink-framework/capabilities/writetarget/monitoring/pb/platform;writetarget";

import "common/execution_context.proto";

// WT sent a transaction on-chain
//
// Notice: we publish txId (TXM ref) vs. txHash (N/A here)
message WriteSent {
  string node = 1;
  string forwarder = 2;
  string receiver = 3;

  // Report Info
  uint32 report_id = 4;

  // Transaction ID - tx reference as created by the WT, to be used for tracking TXM execution
  string tx_id = 5;

  // When was the transaction submitted
  string block_hash = 7;
  string block_height = 8;
  uint64 block_timestamp = 9;

  // [Execution Context]
  common.ExecutionContext execution_context = 20;
}
